tdf#139512: partial revert default row height on new sd tables

Back in 5.0, a regression caused the cell height to ignore
the font height for any empty rows. Well, of course all rows
are empty for a new table, so the table was created with only
a super tiny row height.

That 5.0 regression was properly fixed in 7.4.2 with tdf#144092,
so the height of new rows should automatically be appropriate
for the current font size.
(It was already somewhat fixed in 5.1.1 - enough for this bug.)

Thus, we can revert back to the original default size (200),
since there were complaints that my default size (2000)
was too big.

In practice, each row height will be approximately 750,
since Draw/Impress always create tables with 18pt font size.
200 is appropriate for 4pt font.

Change-Id: Ic03d94ea3557581fd96613a408ab233b2c2c6a7c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152021
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>